fix: scrollbar修改

--- a/components/scrollbar/style/index.less
+++ b/components/scrollbar/style/index.less
@@ -63,7 +63,7 @@
     }
 
     &.@{scrollbar-prefix-cls}-rail--horizontalBg {
-      background: #FAFAFA; 
+      background: @scrollbar-background-color; 
       border-top: 1px solid @border-color-base;
       border-bottom: 1px solid @border-color-base;
     }
@@ -95,7 +95,7 @@
     }
 
     &.@{scrollbar-prefix-cls}-rail--verticalBg {
-      background: #FAFAFA; 
+      background: @scrollbar-background-color; 
       border-left: 1px solid @border-color-base;
       border-right: 1px solid @border-color-base;
     }
