--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -1153,12 +1153,13 @@
 @image-preview-operation-selected-bg: rgba(0, 0, 0, 0);
 
 // ScrollBar
-@scrollbar-bezier: ~'var(--@{ant-prefix}-scrollbar-bezier, cubic-bezier(0.4, 0, 0.2, 1))';
-@scrollbar-color: ~'var(--@{ant-prefix}-scrollbar-color, #C1C1C1)';
-@scrollbar-color-hover: ~'var(--@{ant-prefix}-scrollbar-color-hover, #999999)';
-@scrollbar-border-radius: ~'var(--@{ant-prefix}-scrollbar-border-radius, 4px)';
-@scrollbar-border-hover-radius: ~'var(--@{ant-prefix}-scrollbar-border-hover-radius, 6px)';
-@scrollbar-width: ~'var(--@{ant-prefix}-scrollbar-width, 6px)';
-@scrollbar-hover-width: ~'var(--@{ant-prefix}-scrollbar-hover-width, 10px)';
-@scrollbar-height: ~'var(--@{ant-prefix}-scrollbar-height, 6px)';
-@scrollbar-hover-height: ~'var(--@{ant-prefix}-scrollbar-hover-height, 10px)';
+@scrollbar-bezier: cubic-bezier(0.4, 0, 0.2, 1);
+@scrollbar-color: @C8;
+@scrollbar-color-hover: @E3;
+@scrollbar-border-radius: 4px;
+@scrollbar-border-hover-radius: 6px;
+@scrollbar-width: 6px;
+@scrollbar-hover-width: 10px;
+@scrollbar-height: 6px;
+@scrollbar-hover-height: 10px;
+@scrollbar-background-color: @C16;
